--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,7 @@ code {
 }
 
 $background: url("./public/The_Strip_3_Amelinda_B_Lee.0.0.jpg");
-$logo: "./public/keno_logo.png";
+//$logo: "./public/keno_logo.png";
 
 $black: #000000;
 $black-75: rgba(0, 0, 0, 0.75);
